# cardanodev2023

./: .gitignore  LICENSE  README.md  haskell-template.cabal
app/: Main.hs
src/: MyLib.hs
